name: RPNCalculator
version: 0.0.1
cabal-version: -any
build-type: Simple
license: AllRightsReserved
license-file: ""
copyright: Giacomo Tesio
maintainer: Giacomo Tesio
build-depends: base -any
stability:
homepage:
package-url:
bug-reports:
synopsis: Command line calculator for reverse polish notation.
description: .
             .
             .
category:
author: Giacomo Tesio
tested-with:
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
 
executable: rpn
main-is: Main.hs
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules: Computation
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options: